[gd_scene load_steps=6 format=3 uid="uid://2d7gwea10j80"]

[ext_resource type="Script" path="res://scripts/level.gd" id="1_8ndkd"]
[ext_resource type="PackedScene" uid="uid://8h8k8gw8mkph" path="res://scenes/UI/level_ui.tscn" id="2_pwn3u"]
[ext_resource type="PackedScene" uid="uid://bb7sf1qq1mdt2" path="res://scenes/world_auto_tile_map.tscn" id="3_aclaa"]
[ext_resource type="PackedScene" uid="uid://ky25tq14d7dy" path="res://scenes/level_camera.tscn" id="4_6l4j5"]
[ext_resource type="PackedScene" uid="uid://dwt04gb5u6ke6" path="res://scenes/UI/level_ended.tscn" id="5_t1psi"]

[node name="Level" type="Node2D"]
script = ExtResource("1_8ndkd")

[node name="WorldAutoTileMap" parent="." instance=ExtResource("3_aclaa")]
layer_0/tile_data = PackedInt32Array(-720888, 131074, 0, -393208, 2, 0, -458744, 2, 0, -524280, 2, 0, -589816, 2, 0, -655352, 65538, 0, -65528, 2, 0, -131064, 2, 0, -196600, 2, 0, -262136, 2, 0, -327672, 2, 0, 262152, 2, 0, 196616, 2, 0, 131080, 2, 0, 65544, 2, 0, 8, 2, 0, 262151, 2, 0, 262150, 2, 0, 262149, 2, 0, 262148, 2, 0, 262147, 2, 0, 196611, 2, 0, 262146, 2, 0, 262145, 2, 0, 262144, 2, 0, 327679, 2, 0, 327678, 2, 0, 327677, 2, 0, 327676, 2, 0, 327675, 2, 0, 327674, 2, 0, 327673, 2, 0, 327672, 65538, 0, 327671, 2, 0, 327670, 2, 0, 327669, 2, 0, 327668, 2, 0, 327667, 2, 0, 327666, 2, 0, 327665, 2, 0, 327664, 2, 0, 327663, 2, 0, 327662, 2, 0, 327660, 262146, 0, -720889, 131074, 0, -393209, 2, 0, -65529, 2, 0, 327688, 2, 0, 393224, 2, 0, 524296, 196610, 0, 458760, 2, 0, -720890, 131074, 0, -720891, 131074, 0, -720892, 131074, 0, -720893, 131074, 0, -720894, 131074, 0, -720896, 131074, 0, -720895, 131074, 0, -655360, 2, 0, -655361, 131074, 0, -655362, 131074, 0, -655363, 131074, 0, -655364, 131074, 0, -655365, 131074, 0, -589829, 2, 0, -655366, 131074, 0, -655367, 131074, 0, -655368, 131074, 0, -655369, 131074, 0, -655370, 131074, 0, -589834, 2, 0, -589824, 2, 0, -524298, 2, 0, -655371, 131074, 0, -655372, 131074, 0, -655373, 131074, 0, -655374, 131074, 0, -655375, 131074, 0, -589839, 2, 0, -655376, 131074, 0, -655377, 131074, 0, -655378, 131074, 0, -655379, 131074, 0, -655380, 2, 1, -589844, 262146, 0, -524308, 262146, 0, -458772, 262146, 0, -393236, 262146, 0, -393235, 2, 0, -327700, 262146, 0, -262164, 262146, 0, -196628, 262146, 0, -131092, 262146, 0, -65556, 262146, 0, -65555, 2, 0, -65554, 2, 0, -20, 262146, 0, 65516, 262146, 0, 131052, 262146, 0, 196588, 262146, 0, 262124, 262146, 0, 262125, 2, 0, 393196, 262146, 0, 458732, 262146, 0, 524268, 262146, 0, 589804, 131074, 1, 524295, 196610, 0, 458759, 2, 0, 524294, 196610, 0, 458758, 2, 0, 524293, 196610, 0, 458757, 2, 0, 524292, 196610, 0, 458756, 2, 0, 524291, 196610, 0, 458755, 2, 0, 524290, 196610, 0, 458754, 2, 0, 524289, 196610, 0, 458753, 2, 0, 524288, 196610, 0, 458752, 2, 0, 589823, 196610, 0, 524287, 2, 0, 589822, 196610, 0, 524286, 2, 0, 589821, 196610, 0, 524285, 2, 0, 589820, 196610, 0, 524284, 2, 0, 589819, 196610, 0, 524283, 2, 0, 589818, 196610, 0, 524282, 2, 0, 589817, 196610, 0, 524281, 2, 0, 589816, 196610, 0, 524280, 2, 0, 589815, 196610, 0, 524279, 2, 0, 589814, 196610, 0, 524278, 2, 0, 589813, 196610, 0, 524277, 2, 0, 589812, 196610, 0, 524276, 2, 0, 589811, 196610, 0, 524275, 2, 0, 589810, 196610, 0, 524274, 2, 0, 589809, 196610, 0, 524273, 2, 0, 589808, 196610, 0, 524272, 2, 0, 589807, 196610, 0, 524271, 2, 0, 589806, 196610, 0, 524270, 2, 0, 589805, 196610, 0, 524269, 4, 0, -655355, 2, 0, -655350, 2, 0, -589814, 2, 0, -720886, 131074, 0, -720887, 131074, 0, -720885, 131074, 0, -720884, 131074, 0, -720883, 131074, 0, -720882, 131074, 0, -720881, 131074, 0, -655345, 2, 0, -720880, 131074, 0, -720879, 131074, 0, -720878, 131074, 0, -720877, 131074, 0, -720876, 196610, 1, -655340, 327682, 0, -589804, 327682, 0, -524268, 327682, 0, -458732, 327682, 0, -458733, 2, 0, -393196, 327682, 0, -327660, 327682, 0, -262124, 327682, 0, -196588, 327682, 0, -131052, 327682, 0, -131053, 2, 0, -131054, 2, 0, -65516, 327682, 0, 20, 327682, 0, 65556, 327682, 0, 131092, 327682, 0, 196628, 327682, 0, 196627, 2, 0, 262164, 327682, 0, 327700, 327682, 0, 393236, 327682, 0, 458772, 327682, 0, 524308, 65538, 1, 524307, 196610, 0, 458771, 2, 0, 524306, 196610, 0, 458770, 2, 0, 524305, 196610, 0, 458769, 2, 0, 524304, 196610, 0, 458768, 2, 0, 524303, 196610, 0, 458767, 4, 0, 524302, 196610, 0, 458766, 2, 0, 524301, 196610, 0, 458765, 2, 0, 524300, 196610, 0, 458764, 2, 0, 524299, 196610, 0, 458763, 2, 0, 524298, 196610, 0, 458762, 2, 0, 524297, 196610, 0, 458761, 2, 0, 196615, 2, 0, 131079, 2, 0, 65543, 2, 0, 7, 65538, 0, -131065, 2, 0, -196601, 2, 0, -262137, 2, 0, -327673, 2, 0, -458745, 2, 0, -524281, 2, 0, -589817, 2, 0, -655353, 2, 0, 196614, 2, 0, 131078, 2, 0, 65542, 2, 0, 6, 2, 0, -65530, 2, 0, -131066, 2, 0, -196602, 2, 0, -262138, 2, 0, -327674, 2, 0, -393210, 2, 0, -458746, 2, 0, -524282, 2, 0, -589818, 2, 0, -655354, 2, 0, 196613, 2, 0, 131077, 2, 0, 65541, 2, 0, 5, 2, 0, -65531, 2, 0, -131067, 65538, 0, -196603, 2, 0, -262139, 2, 0, -327675, 2, 0, -393211, 2, 0, -458747, 2, 0, -524283, 2, 0, -589819, 2, 0, 196612, 65538, 0, 131076, 2, 0, 65540, 2, 0, 4, 2, 0, -65532, 2, 0, -131068, 2, 0, -196604, 2, 0, -262140, 2, 0, -327676, 2, 0, -393212, 2, 0, -458748, 2, 0, -524284, 2, 0, -589820, 2, 0, -655356, 2, 0, 131075, 2, 0, 65539, 4, 0, 3, 2, 0, -65533, 2, 0, -131069, 4, 0, -196605, 2, 0, -262141, 2, 0, -327677, 4, 0, -393213, 65538, 0, -458749, 2, 0, -524285, 2, 0, -589821, 2, 0, -655357, 2, 0, 196610, 2, 0, 131074, 2, 0, 65538, 2, 0, 2, 4, 0, -65534, 2, 0, -131070, 2, 0, -196606, 2, 0, -262142, 2, 0, -327678, 2, 0, -393214, 4, 0, -458750, 2, 0, -524286, 2, 0, -589822, 2, 0, -655358, 2, 0, 196609, 2, 0, 131073, 2, 0, 65537, 2, 0, 1, 2, 0, -65535, 2, 0, -131071, 2, 0, -196607, 2, 0, -262143, 2, 0, -327679, 2, 0, -393215, 2, 0, -458751, 2, 0, -524287, 2, 0, -589823, 4, 0, -655359, 2, 0, 196608, 2, 0, 131072, 2, 0, 65536, 2, 0, 0, 2, 0, -65536, 2, 0, -131072, 65538, 0, -196608, 2, 0, -262144, 2, 0, -327680, 2, 0, -393216, 2, 0, -458752, 2, 0, -524288, 2, 0, 262143, 65538, 0, 196607, 2, 0, 131071, 2, 0, 65535, 4, 0, -1, 2, 0, -65537, 2, 0, -131073, 2, 0, -196609, 2, 0, -262145, 2, 0, -327681, 2, 0, -393217, 2, 0, -458753, 2, 0, -524289, 2, 0, -589825, 2, 0, 262142, 2, 0, 196606, 2, 0, 131070, 2, 0, 65534, 2, 0, -2, 2, 0, -65538, 2, 0, -131074, 2, 0, -196610, 2, 0, -262146, 2, 0, -327682, 2, 0, -393218, 2, 0, -458754, 2, 0, -524290, 2, 0, -589826, 2, 0, 262141, 2, 0, 196605, 2, 0, 131069, 2, 0, 65533, 2, 0, -3, 2, 0, -65539, 2, 0, -131075, 2, 0, -196611, 2, 0, -262147, 65538, 0, -327683, 2, 0, -393219, 2, 0, -458755, 2, 0, -524291, 2, 0, -589827, 2, 0, 262140, 2, 0, 196604, 2, 0, 131068, 2, 0, 65532, 2, 0, -4, 2, 0, -65540, 2, 0, -131076, 2, 0, -196612, 2, 0, -262148, 2, 0, -327684, 2, 0, -393220, 2, 0, -458756, 2, 0, -524292, 2, 0, -589828, 2, 0, 262139, 2, 0, 196603, 2, 0, 131067, 2, 0, 65531, 2, 0, -5, 2, 0, -65541, 2, 0, -131077, 2, 0, -196613, 2, 0, -262149, 2, 0, -327685, 2, 0, -393221, 2, 0, -458757, 2, 0, -524293, 2, 0, 262138, 2, 0, 196602, 2, 0, 131066, 2, 0, 65530, 2, 0, -6, 2, 0, -65542, 2, 0, -131078, 2, 0, -196614, 2, 0, -262150, 2, 0, -327686, 2, 0, -393222, 2, 0, -458758, 2, 0, -524294, 2, 0, -589830, 4, 0, 262137, 2, 0, 196601, 2, 0, 131065, 2, 0, 65529, 4, 0, -7, 2, 0, -65543, 2, 0, -131079, 2, 0, -196615, 65538, 0, -262151, 2, 0, -327687, 2, 0, -393223, 2, 0, -458759, 2, 0, -524295, 2, 0, -589831, 2, 0, 262136, 2, 0, 196600, 2, 0, 131064, 2, 0, 65528, 2, 0, -8, 2, 0, -65544, 2, 0, -131080, 2, 0, -196616, 2, 0, -262152, 2, 0, -327688, 2, 0, -393224, 2, 0, -458760, 2, 0, -524296, 2, 0, -589832, 2, 0, 262135, 4, 0, 196599, 2, 0, 131063, 2, 0, 65527, 2, 0, -9, 4, 0, -65545, 2, 0, -131081, 2, 0, -196617, 2, 0, -262153, 4, 0, -327689, 2, 0, -393225, 2, 0, -458761, 4, 0, -524297, 2, 0, -589833, 2, 0, 262134, 2, 0, 196598, 2, 0, 131062, 2, 0, 65526, 2, 0, -10, 4, 0, -65546, 2, 0, -131082, 2, 0, -196618, 2, 0, -262154, 2, 0, -327690, 2, 0, -393226, 2, 0, -458762, 2, 0, 262133, 2, 0, 196597, 2, 0, 131061, 2, 0, 65525, 2, 0, -11, 2, 0, -65547, 2, 0, -131083, 65538, 0, -196619, 2, 0, -262155, 2, 0, -327691, 65538, 0, -393227, 2, 0, -458763, 2, 0, -524299, 2, 0, -589835, 2, 0, 262132, 4, 0, 196596, 2, 0, 131060, 2, 0, 65524, 2, 0, -12, 2, 0, -65548, 2, 0, -131084, 2, 0, -196620, 2, 0, -262156, 2, 0, -327692, 2, 0, -393228, 2, 0, -458764, 4, 0, -524300, 2, 0, -589836, 2, 0, 262131, 2, 0, 196595, 2, 0, 131059, 2, 0, 65523, 2, 0, -13, 2, 0, -65549, 65538, 0, -131085, 2, 0, -196621, 2, 0, -262157, 2, 0, -327693, 2, 0, -393229, 2, 0, -458765, 2, 0, -524301, 2, 0, -589837, 2, 0, 262130, 2, 0, 196594, 2, 0, 131058, 2, 0, 65522, 2, 0, -14, 2, 0, -65550, 2, 0, -131086, 2, 0, -196622, 2, 0, -262158, 2, 0, -327694, 2, 0, -393230, 2, 0, -458766, 2, 0, -524302, 2, 0, -589838, 2, 0, 262129, 2, 0, 196593, 4, 0, 131057, 2, 0, 65521, 2, 0, -15, 2, 0, -65551, 2, 0, -131087, 2, 0, -196623, 2, 0, -262159, 2, 0, -327695, 2, 0, -393231, 2, 0, -458767, 2, 0, -524303, 2, 0, 262128, 2, 0, 196592, 2, 0, 131056, 2, 0, 65520, 2, 0, -16, 2, 0, -65552, 65538, 0, -131088, 2, 0, -196624, 2, 0, -262160, 2, 0, -327696, 2, 0, -393232, 2, 0, -458768, 2, 0, -524304, 2, 0, -589840, 2, 0, 262127, 2, 0, 196591, 4, 0, 131055, 2, 0, 65519, 2, 0, -17, 2, 0, -65553, 2, 0, -131089, 2, 0, -196625, 2, 0, -262161, 2, 0, -327697, 2, 0, -393233, 4, 0, -458769, 2, 0, -524305, 2, 0, -589841, 2, 0, 262126, 2, 0, 196590, 4, 0, 131054, 2, 0, 65518, 2, 0, -18, 2, 0, -131090, 2, 0, -196626, 2, 0, -262162, 2, 0, -327698, 2, 0, -393234, 2, 0, -458770, 2, 0, -524306, 2, 0, -589842, 2, 0, 196589, 65538, 0, 131053, 2, 0, 65517, 2, 0, -19, 2, 0, -131091, 2, 0, -196627, 2, 0, -262163, 2, 0, -327699, 2, 0, -458771, 2, 0, -524307, 65538, 0, -589843, 2, 0, 393223, 2, 0, 327687, 2, 0, 393222, 4, 0, 327686, 2, 0, 393221, 2, 0, 327685, 2, 0, 393220, 2, 0, 327684, 2, 0, 393219, 2, 0, 327683, 2, 0, 393218, 2, 0, 327682, 2, 0, 393217, 2, 0, 327681, 2, 0, 393216, 2, 0, 327680, 2, 0, 458751, 2, 0, 393215, 2, 0, 458750, 2, 0, 393214, 2, 0, 458749, 2, 0, 393213, 2, 0, 458748, 2, 0, 393212, 2, 0, 458747, 2, 0, 393211, 65538, 0, 458746, 65538, 0, 393210, 2, 0, 458745, 2, 0, 393209, 2, 0, 458744, 2, 0, 393208, 2, 0, 458743, 2, 0, 393207, 2, 0, 458742, 2, 0, 393206, 2, 0, 458741, 2, 0, 393205, 2, 0, 458740, 2, 0, 393204, 2, 0, 458739, 2, 0, 393203, 2, 0, 458738, 2, 0, 393202, 4, 0, 458737, 2, 0, 393201, 2, 0, 458736, 2, 0, 393200, 2, 0, 458735, 2, 0, 393199, 2, 0, 458734, 2, 0, 393198, 2, 0, 458733, 2, 0, 393197, 2, 0, 327661, 2, 0, 393235, 2, 0, 327699, 2, 0, 262163, 2, 0, 131091, 2, 0, 65555, 2, 0, 19, 2, 0, -65517, 2, 0, -196589, 2, 0, -262125, 2, 0, -327661, 2, 0, -393197, 2, 0, -524269, 2, 0, -589805, 2, 0, -655341, 2, 0, 393234, 2, 0, 327698, 2, 0, 262162, 2, 0, 196626, 2, 0, 131090, 2, 0, 65554, 2, 0, 18, 2, 0, -65518, 2, 0, -196590, 2, 0, -262126, 2, 0, -327662, 65538, 0, -393198, 2, 0, -458734, 2, 0, -524270, 2, 0, -589806, 2, 0, -655342, 2, 0, 393233, 2, 0, 327697, 2, 0, 262161, 2, 0, 196625, 2, 0, 131089, 65538, 0, 65553, 2, 0, 17, 2, 0, -65519, 2, 0, -131055, 2, 0, -196591, 65538, 0, -262127, 2, 0, -327663, 2, 0, -393199, 2, 0, -458735, 2, 0, -524271, 2, 0, -589807, 2, 0, -655343, 2, 0, 393232, 4, 0, 327696, 2, 0, 262160, 2, 0, 196624, 2, 0, 131088, 2, 0, 65552, 2, 0, 16, 2, 0, -65520, 2, 0, -131056, 65538, 0, -196592, 2, 0, -262128, 2, 0, -327664, 2, 0, -393200, 2, 0, -458736, 2, 0, -524272, 2, 0, -589808, 2, 0, -655344, 2, 0, 393231, 2, 0, 327695, 2, 0, 262159, 2, 0, 196623, 65538, 0, 131087, 2, 0, 65551, 2, 0, 15, 2, 0, -65521, 2, 0, -131057, 2, 0, -196593, 2, 0, -262129, 4, 0, -327665, 2, 0, -393201, 2, 0, -458737, 2, 0, -524273, 2, 0, -589809, 2, 0, 393230, 2, 0, 327694, 2, 0, 262158, 2, 0, 196622, 2, 0, 131086, 2, 0, 65550, 2, 0, 14, 2, 0, -65522, 2, 0, -131058, 2, 0, -196594, 2, 0, -262130, 2, 0, -327666, 2, 0, -393202, 2, 0, -458738, 2, 0, -524274, 2, 0, -589810, 2, 0, -655346, 2, 0, 393229, 2, 0, 327693, 2, 0, 262157, 2, 0, 196621, 2, 0, 131085, 2, 0, 65549, 2, 0, 13, 2, 0, -65523, 2, 0, -131059, 2, 0, -196595, 2, 0, -262131, 2, 0, -327667, 2, 0, -393203, 2, 0, -458739, 2, 0, -524275, 2, 0, -589811, 2, 0, -655347, 2, 0, 393228, 2, 0, 327692, 2, 0, 262156, 2, 0, 196620, 2, 0, 131084, 2, 0, 65548, 2, 0, 12, 2, 0, -65524, 2, 0, -131060, 2, 0, -196596, 2, 0, -262132, 2, 0, -327668, 2, 0, -393204, 4, 0, -458740, 2, 0, -524276, 2, 0, -589812, 2, 0, -655348, 4, 0, 393227, 2, 0, 327691, 2, 0, 262155, 2, 0, 196619, 2, 0, 131083, 2, 0, 65547, 2, 0, 11, 2, 0, -65525, 2, 0, -131061, 2, 0, -196597, 2, 0, -262133, 2, 0, -327669, 2, 0, -393205, 2, 0, -458741, 2, 0, -524277, 2, 0, -589813, 2, 0, -655349, 2, 0, 393226, 4, 0, 327690, 2, 0, 262154, 2, 0, 196618, 2, 0, 131082, 2, 0, 65546, 2, 0, 10, 2, 0, -65526, 2, 0, -131062, 2, 0, -196598, 2, 0, -262134, 2, 0, -327670, 2, 0, -393206, 2, 0, -458742, 2, 0, -524278, 65538, 0, 393225, 2, 0, 327689, 2, 0, 262153, 2, 0, 196617, 2, 0, 131081, 2, 0, 65545, 2, 0, 9, 65538, 0, -65527, 2, 0, -131063, 2, 0, -196599, 2, 0, -262135, 2, 0, -327671, 2, 0, -393207, 2, 0, -458743, 2, 0, -524279, 2, 0, -589815, 2, 0, -655351, 2, 0)
layer_2/tile_data = PackedInt32Array(-655367, 131077, 0, -589831, 65541, 0, -524295, 65541, 0, -458758, 65541, 0, -393221, 65541, 0, -393220, 65541, 0, -327683, 65541, 0, -327682, 65541, 0, -327681, 65541, 0, -458752, 65541, 0, -393217, 65541, 0, -393214, 327685, 5, -458750, 65541, 0, -524286, 65541, 0, -589822, 65541, 0, -655358, 65541, 0, -720894, 131077, 0, -393215, 65541, 0, -458751, 65541, 0, -524287, 65541, 0, -589823, 65541, 0, -655359, 65541, 0, -720895, 131077, 0, -393216, 65541, 0, -524288, 65541, 0, -589824, 65541, 0, -655360, 65541, 0, -720896, 131077, 0, -458753, 65541, 0, -524289, 65541, 0, -589825, 65541, 0, -655361, 131077, 0, -393218, 65541, 0, -458754, 65541, 0, -524290, 65541, 0, -589826, 65541, 0, -655362, 131077, 0, -393219, 65541, 0, -458755, 65541, 0, -524291, 65541, 0, -589827, 65541, 0, -655363, 131077, 0, -327684, 5, 6, -458756, 65541, 0, -524292, 65541, 0, -589828, 65541, 0, -655364, 131077, 0, -327685, 196613, 0, -458757, 65541, 0, -524293, 65541, 0, -589829, 65541, 0, -655365, 131077, 0, -327686, 131077, 1, -393222, 5, 6, -524294, 65541, 0, -589830, 65541, 0, -655366, 131077, 0, -458759, 5, 6, -458760, 131077, 1, -524296, 327685, 2, -589832, 262149, 5, -655368, 5, 1, -393223, 131077, 1, -524297, 131077, 1, -589833, 5, 1, -524282, 65541, 1, -589818, 327685, 0, -524283, 327685, 5, -589819, 65541, 0, -524284, 65541, 0, -589820, 65541, 0, -524285, 65541, 0, -589821, 65541, 0, -655356, 65541, 0, -720892, 131077, 0, -655357, 65541, 0, -720893, 131077, 0, -655355, 65541, 6, -720891, 196613, 1, -393212, 65541, 1, -458748, 327685, 5, -393213, 196613, 0, -458749, 65541, 0, -327680, 327685, 5, -262145, 65541, 0, -262146, 5, 6, -458747, 65541, 1, -655354, 196613, 1, -327679, 196613, 0, -327678, 65541, 1, -262147, 196613, 0, -262148, 131077, 1, -196609, 196613, 0, -196610, 131077, 1, -262144, 65541, 1)
layer_3/tile_data = PackedInt32Array(65527, 196615, 1, 65526, 7, 1, 131061, 131079, 0, 131062, 262151, 5, 131060, 131079, 0, 196595, 262151, 0, 131059, 7, 1, 262131, 262151, 0, 327667, 131079, 1, 327668, 196615, 0, 262133, 327687, 5, 327669, 65543, 1, 262134, 196615, 0, 262135, 65543, 1, 196599, 327687, 5, 196600, 65543, 1, 131064, 196615, 1, 131063, 65543, 6, 196597, 7, 0, 196596, 7, 0, 196598, 7, 0, 262132, 7, 0)

[node name="LevelCamera" parent="." instance=ExtResource("4_6l4j5")]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LevelUI" parent="UI" instance=ExtResource("2_pwn3u")]

[node name="LevelEnded" parent="UI" instance=ExtResource("5_t1psi")]
visible = false

[connection signal="chosen_tree_changed" from="UI/LevelUI" to="." method="_on_level_ui_chosen_tree_changed"]
[connection signal="level_restarted" from="UI/LevelEnded" to="." method="_on_level_ended_level_restarted"]
